Closed Bug 1590709 Opened 6 years ago Closed 5 years ago

Crash in [@ mozilla::psm::TransportSecurityInfo::ReadCertList]

Categories

(Core :: Security: PSM, defect)

Unspecified
Windows 10
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla72
Tracking Status
firefox-esr68 --- unaffected
firefox70 --- unaffected
firefox71 --- fixed
firefox72 --- fixed

People

(Reporter: pascalc, Assigned: sefeng211)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-e42f2531-a4e8-4e8a-a028-034af0191023.

Top 10 frames of crashing thread:

0 xul.dll nsresult mozilla::psm::TransportSecurityInfo::ReadCertList security/manager/ssl/TransportSecurityInfo.cpp:426
1 xul.dll mozilla::psm::TransportSecurityInfo::Read security/manager/ssl/TransportSecurityInfo.cpp:670
2 xul.dll nsBinaryInputStream::ReadObject xpcom/io/nsBinaryStream.cpp:941
3 xul.dll NS_DeserializeObject netwerk/base/nsSerializationHelper.cpp:40
4 xul.dll mozilla::dom::ChannelInfo::ResurrectInfoOnChannel dom/fetch/ChannelInfo.cpp:84
5 xul.dll nsresult mozilla::dom::`anonymous namespace'::StartResponse::Run dom/serviceworkers/ServiceWorkerEvents.cpp:303
6 xul.dll void mozilla::ThrottledEventQueue::Inner::ExecuteRunnable xpcom/threads/ThrottledEventQueue.cpp:252
7 xul.dll nsresult mozilla::ThrottledEventQueue::Inner::Executor::Run xpcom/threads/ThrottledEventQueue.cpp:80
8 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1225
9 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:486

This is a new crash signature that is appearing in 71.0b3 released yesterday.

it's crashing in a diagnostic assert, so it shouldn't affect users on the beta and release channel at least. the regressing bug also got backed out for the moment, but that's probably only helping in 72...

Thanks for the bug, I'll take a look

Assignee: nobody → sefeng
Pushed by sefeng@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/019b333ec455 Fix crash in TransportSecurityInfo::ReadCertList r=keeler
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72

Sean, is that a patch you think we could safely uplift to beta? Thanks

Flags: needinfo?(sefeng)

Yup, I think we can safely uplift it to beta.

Flags: needinfo?(sefeng)

Could you make an uplift request please? Thanks!

Flags: needinfo?(sefeng)

Comment on attachment 9104119 [details]
Bug 1590709 - Fix crash in TransportSecurityInfo::ReadCertList

Beta/Release Uplift Approval Request

  • User impact if declined: End user may experience browser crashes.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Medium
  • Why is the change risky/not risky? (and alternatives if risky): The change is medium risky because it affects how certificate information is being deserialized, so the code that are touched are a bit risky.
  • String changes made/needed:
Flags: needinfo?(sefeng)
Attachment #9104119 - Flags: approval-mozilla-beta?

I wrote it as it hasn't been verified in Nightly because I couldn't find if we collect the same bug report for Nightly, so I don't know whether the crash rate dropped or not. However, when I was working on the bug fix, I was able to reproduce the crashes by using the test cases, so I expect the patch should fix the crash.

Comment on attachment 9104119 [details]
Bug 1590709 - Fix crash in TransportSecurityInfo::ReadCertList

Fix with tests for a medium volume crash on beta, uplift approved for 71 beta 6, thanks.

Attachment #9104119 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: