Bug 1590709 - Fix crash in TransportSecurityInfo::ReadCertList r=keeler a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D50557

--HG--
extra : source : 019b333ec4552b0bcaefb27f0cb969815cff9b11